# poutre

./: Cargo.toml  README.md  Trunk.toml  index.html
server/: Cargo.toml
server/src/: generation.rs  lib.rs  validation.rs
src/: app.rs  graphics.rs  input.rs  main.rs  network.rs  state.rs  vertex.rs  window.rs  world.rs
src/module_bindings/: connection_type.rs  excavate_reducer.rs  excavation_type.rs  mod.rs  player_type.rs  request_world_chunks_reducer.rs  update_player_transform_reducer.rs  world_chunk_table.rs  world_chunk_type.rs  world_table.rs  world_type.rs
src/shaders/: composite.wgsl  cube.wgsl  player.wgsl  water.wgsl
