[package]
name = "poutre"
version = "0.1.0"
edition = "2024"

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.103"
bytemuck = "1.25.1"
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui-winit = "0.35.0"
env_logger = "0.11.11"
glam = "0.33.2"
log = "0.4.33"
noise = "0.9.0"
pollster = "0.4.0"
rayon = "1.12.0"
wgpu = "29.0.3"
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
