[package]
name = "poutre"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["server"]
resolver = "3"

[dependencies]
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui-winit = "0.35.0"
glam = "0.33.2"
pollster = "0.4.0"
spacetimedb-sdk = "2.6.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "29.0.3"
winit = "0.30.13"
